--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-simple-wysiwyg": "^3.2.2",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
