--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.9",
+    "crypto-js": "^4.2.0",
     "moment": "^2.30.1",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
@@ -24,6 +25,7 @@
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
