--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "chart.js": "^4.4.9",
     "cookie-js": "^0.0.1",
     "crypto-js": "^4.2.0",
+    "docx": "^9.5.0",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "moment": "^2.30.1",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
