--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://147.93.106.185:3000
+# REACT_APP_API_URL=http://147.93.106.185:3000
+REACT_APP_API_URL=https://wahbulk.com:3000
