--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
     "cookie-js": "^0.0.1",
     "crypto-js": "^4.2.0",
@@ -28,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-simple-wysiwyg": "^3.2.2",
     "react-toastify": "^10.0.6",
+    "reactflow": "^11.11.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4",
